# liter-llm

./: .gitattributes  .gitignore  .golangci.yml  .lychee.toml  .lycheecache  .pre-commit-config.yaml  .rumdl.toml  .textlintrc.json  .typos.toml  ATTRIBUTIONS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Package.swift  README.md  SECURITY.md  Taskfile.yml  _typos.toml  alef.toml  analysis_options.yaml  composer.json  config.m4  deny.toml  docker-compose.yml  go.work.sum  llms.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  poly.toml  pyproject.toml  tsconfig.json  zensical.toml
.agents/agents/: c-ffi-specialist.md  csharp-specialist.md  dart-specialist.md  e2e-generator-engineer.md  elixir-specialist.md  go-specialist.md  (+11 more)
.ai-rulez/: .generated-manifest.json  config.toml
.cargo/: config.toml
.github/: dependabot.yaml
cli-proxy/pypi/: README.md  pyproject.toml
cli-proxy/pypi/liter_llm_cli/: cli.py  downloader.py
crates/liter-llm/: Cargo.toml  README.md
crates/liter-llm-catalog-gen/: Cargo.toml
crates/liter-llm-catalog-gen/src/: error.rs  lib.rs  main.rs  render.rs  schema.rs  transform.rs
crates/liter-llm-catalog-gen/tests/: pipeline_tests.rs
crates/liter-llm-catalog-gen/tests/fixtures/: sample_api.json
crates/liter-llm-cli/: Cargo.toml
crates/liter-llm-cli/src/: allocator.rs  main.rs
crates/liter-llm-cli/src/commands/: api.rs  mcp.rs
crates/liter-llm-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/liter-llm-ffi/cmake/: liter-llm-ffi-config.cmake
crates/liter-llm-ffi/include/: liter_llm.h
crates/liter-llm-ffi/src/: lib.rs
crates/liter-llm-node/: Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/liter-llm-node/npm/darwin-arm64/: README.md  package.json
crates/liter-llm-node/npm/darwin-x64/: README.md  package.json
crates/liter-llm-node/npm/linux-arm64-gnu/: README.md  package.json
crates/liter-llm-node/npm/linux-arm64-musl/: package.json
crates/liter-llm-node/npm/linux-x64-gnu/: README.md  package.json
crates/liter-llm-node/npm/linux-x64-musl/: package.json
crates/liter-llm-node/npm/win32-arm64-msvc/: README.md  package.json
crates/liter-llm-node/npm/win32-x64-msvc/: README.md  package.json
crates/liter-llm-node/src/: lib.rs
crates/liter-llm-php/: Cargo.toml
crates/liter-llm-php/src/: composer.json  lib.rs  phpstan.neon
crates/liter-llm-proxy/: Cargo.toml
crates/liter-llm-proxy/src/: error.rs  file_store.rs  lib.rs  openapi.rs  service_pool.rs  shutdown.rs  state.rs  streaming.rs
crates/liter-llm-proxy/src/auth/: key_store.rs  mod.rs
crates/liter-llm-proxy/src/config/: key.rs  mcp.rs  mod.rs  provider.rs  security.rs  server.rs  watcher.rs
crates/liter-llm-proxy/src/mcp/: mod.rs  params.rs  tools.rs
crates/liter-llm-proxy/src/provider/: auto_cycle.rs  credential_pool.rs  credential_pool_memory.rs  metrics.rs  mod.rs
crates/liter-llm-proxy/src/routes/: chat.rs  health.rs  mod.rs  realtime.rs
crates/liter-llm-proxy/src/secrets/: aws.rs  env.rs  mod.rs  registry.rs  vault.rs
crates/liter-llm-proxy/tests/: auth_integration.rs  chat_integration.rs  cors_integration.rs  e2e_stack_integration.rs  embedding_injection.rs  embeddings_integration.rs  error_integration.rs  health_integration.rs  models_integration.rs  secrets_aws.rs  secrets_vault.rs  tenant_propagation.rs
crates/liter-llm-proxy/tests/common/: mock_upstream.rs  mod.rs  test_proxy.rs
crates/liter-llm-py/: Cargo.toml
crates/liter-llm-py/src/: lib.rs  pyproject.toml
crates/liter-llm/schemas/: pricing.json  providers.json
crates/liter-llm/src/: bindings.rs  cache_key.rs  cost.rs  embedding.rs  error.rs  image.rs  lib.rs  streaming.rs  tests.rs  tokenizer.rs
crates/liter-llm/src/auth/: azure_ad.rs  bedrock_sts.rs  github_copilot.rs  mod.rs  vertex_adc.rs  vertex_oauth.rs
crates/liter-llm/src/client/: builder.rs  config.rs  config_file.rs  managed.rs  mod.rs
crates/liter-llm/src/cost/: refresh.rs  refresh_tests.rs  tests.rs
crates/liter-llm/src/guardrail/: builtin.rs  cel.rs  mod.rs  registry.rs  tests.rs
crates/liter-llm/src/http/: eventstream.rs  mod.rs  request.rs  retry.rs  streaming.rs  transport.rs
crates/liter-llm/src/observability/: mod.rs  usage.rs
crates/liter-llm/src/provider/: anthropic.rs  azure.rs  bedrock.rs  cohere.rs  custom.rs  github_copilot.rs  google_ai.rs  mistral.rs  mod.rs  outbound_policy.rs  vertex.rs
crates/liter-llm/src/realtime/: mod.rs  openai.rs
crates/liter-llm/src/tenant/: context.rs  etcd.rs  in_memory.rs  mod.rs  resolver.rs
crates/liter-llm/src/tower/: budget.rs  cache.rs  cache_negative.rs  cache_opendal.rs  cache_policy.rs  cache_singleflight.rs  circuit.rs  cooldown.rs  cost.rs  error.rs  fallback.rs  fallback_chain.rs  guardrail.rs  health.rs  hedge.rs  hooks.rs  idempotency.rs  metrics.rs  mod.rs  rate_limit.rs  route_classify.rs  router.rs  service.rs  tests.rs  tests_common.rs  tracing.rs  types.rs
crates/liter-llm/src/types/: audio.rs  batch.rs  chat.rs  common.rs  embedding.rs  files.rs  image.rs  mod.rs  models.rs  moderation.rs  ocr.rs  rerank.rs  responses.rs  search.rs
crates/liter-llm/src/util/: bounds.rs  mod.rs
crates/liter-llm/src/vectorstore/: memory.rs  mod.rs  opendal.rs
crates/liter-llm/tests/: batch_polling.rs  cache_integration.rs  cache_state_wiring.rs  concurrency.rs  config_file.rs  contract.rs  etcd_resolver.rs  fallback_chain.rs  idempotency.rs  live_providers.rs  local_llm.rs  middleware_integration.rs  operations_integration.rs  routing_integration.rs  tenant.rs  usage_sink.rs  vertex_adc.rs
crates/liter-llm/tests/common/: mod.rs
crates/liter-llm/tests/live_providers/: anthropic.rs  bedrock.rs  cross_provider.rs  google_ai.rs  vertex_ai.rs
docker/: Dockerfile  docker-compose.local-llm.yml
docs/: contributing.md  ecosystem.md  index.md  llms.txt  providers.md  robots.txt
docs-site/: astro.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
fixtures/: schema.json
schemas/: pricing.json  providers.json
scripts/: generate_pricing.py  generate_providers_doc.py
(+2550 files in other folders)
