[workspace]
members = [
    "crates/liter-llm",
    "crates/liter-llm-cli",
    "crates/liter-llm-ffi",
    "crates/liter-llm-jni",
    "crates/liter-llm-node",
    "crates/liter-llm-php",
    "crates/liter-llm-proxy",
    "crates/liter-llm-py",
    "crates/liter-llm-wasm",
    "packages/dart/rust",
    "packages/swift/rust",
]
exclude = [
    "e2e/rust",
    "packages/elixir/native/liter_llm_nif",
    "packages/ruby/ext/liter_llm_rb/native",
]
resolver = "2"

[workspace.lints.clippy]

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(alef)'] }

[workspace.package]
version = "1.4.0-rc.56"
edition = "2024"
license = "MIT"
repository = "https://github.com/kreuzberg-dev/liter-llm"
homepage = "https://kreuzberg.dev"
authors = ["Na'aman Hirschfeld <naaman@kreuzberg.dev>"]
description = "Universal LLM API client — 142+ providers, streaming, tool calling. Rust-powered with polyglot bindings."
keywords = ["llm", "openai", "api-client", "ai", "kreuzberg"]

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
base64 = "0.22"
bytes = "1"

# CLI (for tools)
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
futures-core = "0.3"
futures-util = "0.3"
gcp_auth = { version = "0.12", default-features = false, features = ["ring"] }
jsonschema = "0.46"
jsonwebtoken = { version = "10", default-features = false, features = ["use_pem"] }

# Binding frameworks
magnus = "0.8"
memchr = "2"
napi = { version = "3", features = ["napi4", "serde-json", "async"] }
napi-build = "2"
napi-derive = "3"
opendal = { version = "0.56", default-features = false, features = [
    "services-memory",
    "services-redis",
    "services-fs",
    "services-s3",
] }
opentelemetry = "0.32"
pin-project-lite = "0.2"
pyo3 = { version = "0.28", features = ["abi3-py310", "multiple-pymethods"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
rayon = "1"
rb-sys = "0.9"
# Async / HTTP
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "stream",
    "rustls-no-provider",
    "multipart",
    "form",
] }
rmcp = { version = "1.7", features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
    "server-side-http",
] }
rustler = "0.37"
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
] }

# Serialization
schemars = "1"

# Security
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serial_test = "3"
tempfile = "3"

# Error handling
thiserror = "2"
tokenizers = { version = "0.23", default-features = false, features = ["http", "fancy-regex"] }
tokio = { version = "1", features = ["full"] }
toml = "1.1"
tower = { version = "0.5", features = [
    "retry",
    "limit",
    "timeout",
    "buffer",
    "load-shed",
    "steer",
    "util",
] }
tower-http = { version = "0.6", features = [
    "follow-redirect",
    "set-header",
    "sensitive-headers",
    "trace",
    "request-id",
    "cors",
    "compression-gzip",
    "catch-panic",
    "limit",
] }
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "5.5", features = ["axum_extras"] }
walkdir = "2.5"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
which = "8"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true
