[workspace]
members = [
    "crates/liter-llm",
    "crates/liter-llm-cli",
    "crates/liter-llm-ffi",
    "crates/liter-llm-jni",
    "crates/liter-llm-node",
    "crates/liter-llm-php",
    "crates/liter-llm-proxy",
    "crates/liter-llm-py",
    "crates/liter-llm-wasm",
    "packages/dart/rust",
    "packages/swift/rust",
]
exclude = [
    "e2e/rust",
    "packages/elixir/native/liter_llm_nif",
    "packages/ruby/ext/liter_llm_rb/native",
]
resolver = "2"

[workspace.lints.clippy]
# --- Deny: correctness -------------------------------------------------------
# Catches logic bugs that are almost certainly wrong.
correctness = { level = "deny", priority = -1 }
# --- Deny: suspicious --------------------------------------------------------
# Catches patterns that are likely unintentional or misleading.
suspicious = { level = "deny", priority = -1 }
# --- Deny: perf --------------------------------------------------------------
# Catches avoidable performance regressions.
perf = { level = "deny", priority = -1 }
# --- Warn: style -------------------------------------------------------------
# Enforces consistent, idiomatic Rust — warn rather than deny so style issues
# don't block non-style PRs.
style = { level = "warn", priority = -1 }
# --- Explicit allows ---------------------------------------------------------
# unused-unit: generated FFI bridge shims (alef/swift-bridge) emit `-> ()`.
# Denying this would require patching generated output on every regen.
unused-unit = "allow"
# needless-pass-by-value: public API takes owned values for FFI-friendliness;
# changing signatures would break cross-language ABI stability.
needless-pass-by-value = "allow"
# module-name-repetitions: `LlmError`, `LlmClient` etc. are idiomatic in a
# library crate named `liter-llm` — the repetition aids discoverability.
module-name-repetitions = "allow"
# missing-errors-doc: not all public functions are public API in the
# rustdoc sense; requiring `# Errors` on every fn that returns `Result`
# is too noisy during active development.
missing-errors-doc = "allow"
# missing-panics-doc: same rationale as missing-errors-doc.
missing-panics-doc = "allow"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(alef)'] }

[workspace.package]
version = "1.8.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/xberg-io/liter-llm"
homepage = "https://xberg.io"
authors = ["Na'aman Hirschfeld <naaman@xberg.io>"]
description = "Universal LLM API client — 143 providers, streaming, tool calling. Rust-powered with polyglot bindings."
keywords = ["llm", "openai", "api-client", "ai", "xberg"]

[workspace.dependencies]
ahash = "0.8"
anyhow = "1"
arc-swap = "1"
async-trait = "0.1"

# Secret backends
aws-config = { version = "1", default-features = false, features = ["rustls"] }
aws-sdk-secretsmanager = { version = "1", default-features = false, features = ["rustls"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
vaultrs = { version = "0.8", default-features = false, features = ["rustls"] }

axum = { version = "0.8", features = ["macros", "ws"] }
# Optional global allocators — selected via `mimalloc`/`jemalloc` features on
# `liter-llm-cli`.  Off by default; absence means the system allocator is used.
mimalloc = { version = "0.1", default-features = false }
tikv-jemallocator = { version = "0.6" }
axum-extra = { version = "0.12", features = ["typed-header"] }
base64 = "0.22"
bytes = "1"

# CLI (for tools)
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
futures-core = "0.3"
futures-util = "0.3"
http = "1"
gcp_auth = { version = "0.12", default-features = false, features = ["ring"] }
jsonschema = "0.46"
jsonwebtoken = { version = "10", default-features = false, features = ["use_pem"] }

# Binding frameworks
magnus = "0.8"
memchr = "2"
napi = { version = "3", features = ["napi4", "serde-json", "async"] }
napi-build = "2"
napi-derive = "3"
opendal = { version = "0.57", default-features = false, features = [
    "services-memory",
    "services-redis",
    "services-fs",
    "services-s3",
] }
opentelemetry = { version = "0.32", features = ["metrics"] }
pin-project-lite = "0.2"
pyo3 = { version = "0.29", features = ["abi3-py310", "multiple-pymethods"] }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
rayon = "1"
rb-sys = "0.9"
# Async / HTTP — TLS-agnostic base only; each crate adds TLS features target-conditionally
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "stream",
    "multipart",
    "form",
] }
rmcp = { version = "1.7", features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
    "server-side-http",
] }
rust_decimal = { version = "1", features = ["serde"] }
rustler = "0.38"
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
] }

# Serialization
schemars = "1"

# Security
secrecy = { version = "0.10", features = ["serde"] }
subtle = "2.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serial_test = "3"
tempfile = "3"

# Error handling
thiserror = "2"
notify = { version = "8", features = ["macos_kqueue"] }
etcd-client = { version = "0.15", default-features = false }
hex = "0.4"
sha2 = "0.10"
tokenizers = { version = "0.23", default-features = false, features = ["http", "fancy-regex"] }
tokio = { version = "1", features = ["full"] }
# Use `rustls-tls-native-roots` so tokio-tungstenite does NOT pull
# native-tls → openssl-sys (which breaks brew bottle builds on Linux runners
# without `openssl-dev`, and would also force the same OpenSSL dep on every
# downstream consumer of liter-llm-proxy). The rest of the stack already uses
# rustls (reqwest, etc.); pulling native-tls just for tungstenite was the
# only thing keeping openssl-sys in the dep tree.
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "handshake", "rustls-tls-native-roots"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "1.1"
tower = { version = "0.5", features = [
    "retry",
    "limit",
    "timeout",
    "buffer",
    "load-shed",
    "steer",
    "util",
    "discover",
    "ready-cache",
] }
tower-http = { version = "0.6", features = [
    "follow-redirect",
    "set-header",
    "sensitive-headers",
    "trace",
    "request-id",
    "cors",
    "compression-gzip",
    "catch-panic",
    "limit",
] }
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"
tracing-opentelemetry = "0.33"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.5"
utoipa = { version = "5.5", features = ["axum_extras"] }
walkdir = "2.5"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
which = "8"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = false

[profile.dev]
opt-level = 0
debug = true
