[workspace]
members = [
    "crates/liter-llm",
    "crates/liter-llm-cli",
    "crates/liter-llm-ffi",
    "crates/liter-llm-jni",
    "crates/liter-llm-node",
    "crates/liter-llm-php",
    "crates/liter-llm-proxy",
    "crates/liter-llm-py",
    "crates/liter-llm-wasm",
    "packages/dart/rust",
    "packages/swift/rust",
]
exclude = [
    "e2e/rust",
    "packages/elixir/native/liter_llm_nif",
    "packages/ruby/ext/liter_llm_rb/native",
]
resolver = "2"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "warn", priority = -1 }
# ~keep unused-unit: generated FFI bridge shims (alef/swift-bridge) emit `-> ()`.
# ~keep Denying this would require patching generated output on every regen.
unused-unit = "allow"
# ~keep needless-pass-by-value: public API takes owned values for FFI-friendliness;
# ~keep changing signatures would break cross-language ABI stability.
needless-pass-by-value = "allow"
module-name-repetitions = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(alef)'] }

[workspace.package]
version = "1.9.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/xberg-io/liter-llm"
homepage = "https://xberg.io"
authors = ["Na'aman Hirschfeld <naaman@xberg.io>"]
description = "Universal LLM API client — 143 providers, streaming, tool calling. Rust-powered with polyglot bindings."
keywords = ["llm", "openai", "api-client", "ai", "xberg"]

[workspace.dependencies]
ahash = "0.8"
anyhow = "1"
arc-swap = "1"
async-trait = "0.1"

aws-config = { version = "1", default-features = false, features = ["rustls"] }
aws-sdk-secretsmanager = { version = "1", default-features = false, features = ["rustls"] }

axum = { version = "0.8", features = ["macros", "ws"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
base64 = "0.22"
bytes = { version = "1", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }

clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
etcd-client = { version = "0.19", default-features = false }
futures-core = "0.3"
futures-util = "0.3"
gcp_auth = { version = "0.12", default-features = false, features = ["ring"] }
hex = "0.4"
http = "1"
jsonschema = "0.46"
jsonwebtoken = { version = "10", default-features = false, features = ["use_pem"] }

magnus = "0.8"
memchr = "2"
mimalloc = { version = "0.1", default-features = false }
napi = { version = "3", features = ["napi4", "serde-json", "async"] }
napi-build = "2"
napi-derive = "3"
notify = { version = "8", features = ["macos_kqueue"] }
opendal = { version = "0.57", default-features = false, features = [
    "services-memory",
    "services-redis",
    "services-fs",
    "services-s3",
] }
opentelemetry = { version = "0.32", features = ["metrics"] }
pin-project-lite = "0.2"
pyo3 = { version = "0.29", features = ["abi3-py310", "multiple-pymethods"] }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
rayon = "1"
rb-sys = "0.9"
# ~keep Async / HTTP: TLS-agnostic base only; each crate adds TLS features target-conditionally.
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "multipart", "form"] }
rmcp = { version = "2.1", features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
    "server-side-http",
] }
rust_decimal = { version = "1", features = ["serde"] }
rustler = "0.38"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }

schemars = "1"

secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serial_test = "3"
sha2 = "0.11"
subtle = "2.6"
tempfile = "3"

thiserror = "2"
tikv-jemallocator = { version = "0.7" }
tokenizers = { version = "0.23", default-features = false, features = ["http", "fancy-regex"] }
tokio = { version = "1", features = ["full"] }
# ~keep Use `rustls-tls-native-roots` so tokio-tungstenite does not pull
# ~keep native-tls -> openssl-sys, which breaks Linux brew bottles without
# ~keep `openssl-dev` and would force OpenSSL on downstream liter-llm-proxy users.
tokio-tungstenite = { version = "0.29", default-features = false, features = [
    "connect",
    "handshake",
    "rustls-tls-native-roots",
] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "1.1"
tower = { version = "0.5", features = [
    "retry",
    "limit",
    "timeout",
    "buffer",
    "load-shed",
    "steer",
    "util",
    "discover",
    "ready-cache",
] }
tower-http = { version = "0.7", features = [
    "follow-redirect",
    "set-header",
    "sensitive-headers",
    "trace",
    "request-id",
    "cors",
    "compression-gzip",
    "catch-panic",
    "limit",
] }
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"
tracing-opentelemetry = "0.33"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.5"
utoipa = { version = "5.5", features = ["axum_extras"] }
vaultrs = { version = "0.8", default-features = false, features = ["rustls"] }
walkdir = "2.5"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
which = "8"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = false

[profile.dev]
opt-level = 0
debug = true
