[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liter-llm-cli"
version = "0.1.0"
description = "CLI proxy for liter-llm — downloads and runs the native liter-llm binary from GitHub releases."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Na'aman Hirschfeld", email = "naaman@kreuzberg.dev" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/kreuzberg-dev/liter-llm"
Repository = "https://github.com/kreuzberg-dev/liter-llm.git"
Issues = "https://github.com/kreuzberg-dev/liter-llm/issues"

[project.scripts]
liter-llm = "liter_llm_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["liter_llm_cli"]
