[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "liter-llm-cli"
version = "0.1.0"
description = "CLI proxy for liter-llm — downloads and runs the native liter-llm binary from GitHub releases."
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Na'aman Hirschfeld", email = "naaman@xberg.io" } ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
urls.Homepage = "https://github.com/xberg-io/liter-llm"
urls.Issues = "https://github.com/xberg-io/liter-llm/issues"
urls.Repository = "https://github.com/xberg-io/liter-llm.git"
scripts.liter-llm = "liter_llm_cli.cli:main"

[tool.hatch]
build.targets.wheel.packages = [ "liter_llm_cli" ]
