[package]
name = "liter-llm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "CLI for liter-llm — start an OpenAI-compatible proxy server or MCP tool server."
keywords = ["llm", "proxy", "cli", "openai", "xberg"]

[[bin]]
name = "liter-llm"
path = "src/main.rs"

[features]
otel = ["liter-llm-proxy/otel"]

# ~keep Off by default; etcd watch pulls transitive `protoc`/`prost-build`.
etcd-watch = ["liter-llm-proxy/etcd-watch"]

# ~keep If both allocator features are enabled, the allocator module emits a compile error.
mimalloc = ["dep:mimalloc"]
jemalloc = ["dep:tikv-jemallocator"]

default = []

[dependencies]
arc-swap = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
liter-llm = { path = "../liter-llm", version = "1.10.1" }
liter-llm-proxy = { path = "../liter-llm-proxy", version = "1.10.1" }
mimalloc = { workspace = true, optional = true }
rmcp = { workspace = true }
secrecy = { workspace = true }
tikv-jemallocator = { workspace = true, optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
