[package]
name = "liter-llm-ffi"
version = "1.4.0-rc.45"
edition = "2021"
license = "MIT"
description = "Universal LLM API client with Rust-powered polyglot bindings."
readme = false
keywords = ["anthropic", "api-client", "llm", "openai"]
categories = ["text-processing"]
repository = "https://github.com/kreuzberg-dev/liter-llm"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
liter-llm = { path = "../liter-llm", version = "1.4.0-rc.45", features = ["native-http", "full"] }
ahash = "0.8"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# `serde_json`, `ahash`, and `tokio` are emitted unconditionally above so the
# manifest is stable across regens (and so the C FFI codegen can pull them in
# when an async / Result-typed function appears in the API surface), but for
# umbrella crates with no async fns and no JSON-marshalled return types they
# are genuinely unused. The conditional `async-trait` / `futures-util` deps
# are similarly flagged when the umbrella has trait-bridge / streaming adapters
# configured but no actual async-trait / async-stream callsite in the generated
# FFI shim.
[package.metadata.cargo-machete]
ignored = ["ahash", "serde_json", "tokio", "futures-util"]

[features]
default = []

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
tempfile = "3"
