[package]
name = "liter-llm-ffi"
version = "1.6.1"
edition = "2021"
license = "MIT"
description = "Universal LLM API client with Rust-powered polyglot bindings."
readme = false
keywords = ["anthropic", "api-client", "llm", "openai"]
categories = []
repository = "https://github.com/kreuzberg-dev/liter-llm"

# `serde_json`, `ahash`, and `tokio` are emitted unconditionally above so the
# manifest is stable across regens (and so the C FFI codegen can pull them in
# when an async / Result-typed function appears in the API surface), but for
# umbrella crates with no async fns and no JSON-marshalled return types they
# are genuinely unused. The conditional `async-trait` / `futures-util` deps
# are similarly flagged when the umbrella has trait-bridge / streaming adapters
# configured but no actual async-trait / async-stream callsite in the generated
# FFI shim.
[package.metadata.cargo-machete]
ignored = ["ahash", "serde_json", "tokio", "futures-util"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["native-http", "full"]
native-http = ["liter-llm/native-http"]
full = ["liter-llm/full"]
# Declared so alef-emitted `#[cfg(feature = "wasm-http")]` gates in src/lib.rs
# resolve without triggering `unexpected_cfgs` warnings under `-D warnings`.
# Never enabled in default builds — FFI consumers run native-http only. Do not
# remove: `alef sync-versions` strips this; re-add manually if regen wipes it.
wasm-http = ["liter-llm/wasm-http"]

[dependencies]
ahash = "0.8"
futures-util = "0.3"
liter-llm = { path = "../liter-llm", version = "1.6.1", features = ["native-http", "full"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
tempfile = "3"
