[package]
name = "liter-llm-node"
version = "1.4.0-rc.27"
edition = "2024"
license = "MIT"
description = "Universal LLM API client with Rust-powered polyglot bindings."
readme = false
keywords = ["llm", "api-client", "openai", "anthropic"]
categories = ["text-processing"]

# `serde_json` is emitted unconditionally above so the manifest is stable
# across regens, but for umbrella crates with no JSON-marshalled return types
# it is genuinely unused. List it here so `cargo machete` doesn't flag the
# no-json case as a real finding.
[package.metadata.cargo-machete]
ignored = ["serde_json"]

[lib]
crate-type = ["cdylib"]

[dependencies]
futures-util = "0.3"
liter-llm = { path = "../liter-llm", features = ["native-http", "full"] }
napi = { version = "3", features = ["async", "serde-json"] }
napi-derive = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"
