[package]
name = "liter-llm-node"
version = "1.7.5"
edition = "2024"
license = "MIT"
description = "Universal LLM API client with Rust-powered polyglot bindings."
readme = false
keywords = ["anthropic", "api-client", "llm", "openai"]
categories = []

# `serde_json` is emitted unconditionally above so the manifest is stable
# across regens, but for umbrella crates with no JSON-marshalled return types
# it is genuinely unused. The conditional `async-trait` / `futures-util` deps
# are similarly flagged when the umbrella has trait-bridge / streaming
# adapters configured but no actual async-trait callsite in this binding.
[package.metadata.cargo-machete]
ignored = ["serde_json", "futures-util"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["native-http", "opendal-cache", "wasm-http"]
native-http = ["liter-llm/native-http"]
opendal-cache = ["liter-llm/opendal-cache"]
wasm-http = ["liter-llm/wasm-http"]

[dependencies]
futures-util = "0.3"
liter-llm = { version = "1.7.5", path = "../liter-llm", features = ["native-http", "full"] }
napi = { version = "3", features = ["async", "serde-json"] }
napi-derive = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"
