[package]
name = "liter-llm-php"
version = "1.4.0-rc.34"
edition = "2024"
license = "MIT"
description = "Universal LLM API client with Rust-powered polyglot bindings."
readme = false
keywords = ["llm", "api-client", "openai", "anthropic"]
categories = ["text-processing"]

[lib]
crate-type = ["cdylib"]

[dependencies]
liter-llm = { version = "1.4.0-rc.34", path = "../liter-llm", features = ["native-http", "full"] }
ext-php-rs = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# `ahash` and `futures-util` are conditionally included but not directly used in PHP code.
[package.metadata.cargo-machete]
ignored = ["tokio", "ahash", "futures-util"]

[features]
extension-module = []
