[package]
name = "liter-llm-php"
version = "1.8.1"
edition = "2024"
license = "MIT"
description = "Universal LLM API client with Rust-powered polyglot bindings."
readme = false
keywords = ["anthropic", "api-client", "llm", "openai"]
categories = []

# `ahash` and `futures-util` are conditionally included but not directly used in PHP code.
[package.metadata.cargo-machete]
ignored = ["tokio", "ahash", "futures-util"]

[lib]
crate-type = ["cdylib"]

[features]
extension-module = []
default = ["native-http", "opendal-cache", "wasm-http"]
native-http = ["liter-llm/native-http"]
opendal-cache = ["liter-llm/opendal-cache"]
wasm-http = ["liter-llm/wasm-http"]

[dependencies]
ext-php-rs = "0.15.15"
futures-util = "0.3"
liter-llm = { version = "1.8.1", path = "../liter-llm", features = ["native-http", "full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
